v1.2.0:
  Remove hiera dependency
  Update sensu dependency
v1.1.4:
  Add sensu monitoring
v1.1.3:
  Initial public release