@@ -5,5 +5,3 @@ license 'Apache'
 summary 'Manages redis.'
 description 'Installs, configures, and runs the redis service.'
 project_page 'https://github.com/evenup/evenup-redis'
-dependency 'evenup/ruby', '>= 1.3.0'
-
